CSS chromebook bug fixes
CSS chromebook issues fixed:
-About Us page text overlap + gradient issues
-Inquiry form updated
-Menu spacing fixed

--- a/main.css
+++ b/main.css
@@ -17,8 +17,8 @@ h1 {
     color: white;
     font-family: 'Courier New', Courier, monospace;
     font-size: 2rem;
-    padding-left: 10vw;
-    padding-top: 1%;
+    padding-top: 2%;
+    margin-left: 8%;
 }   
 
 .background-container {
@@ -56,7 +56,7 @@ h1 {
     width: 100vw;
     justify-content: end;
     margin-top: 2%;
-    margin-right: 10px;
+    margin-right: 5%;
     align-items: center;
 }
 
@@ -71,7 +71,7 @@ h1 {
     color: white;
     font-size: 2rem;
     margin-left: 1em;
-    margin-right: 3em;
+    margin-right: 5%;
     border-radius: 0.4em;
     width: 5em;
     height: 2em;
@@ -97,6 +97,7 @@ h1 {
     border: none;
     width: auto;
     height: 2.5em;
+    margin-left: 0%;
 }
 
 #invisible-button-container {
